@@ -2,6 +2,7 @@ OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.20 Engineering
 	Fixed libldap uninitialized return value (ITS#6355)
+	Fixed slapd inclusion of ac/unistd.h (ITS#6342)
 	Fixed slapd debug handling of LDAP_DEBUG_ANY (ITS#6324)
 	Fixed slapd termination for one level dns (ITS#6338)
 	Fixed slapd-bdb cache corruption (ITS#6341)
@@ -9,6 +10,8 @@ OpenLDAP 2.4.20 Engineering
 	Fixed slapd-relay bind segfault (ITS#6337)
 	Fixed slapo-memberof operational attr updates (ITS#6329)
 	Fixed slapo-syncprov deadlock (ITS#6335)
+	Build Environment
+		Fixed slapd MAXPATHLEN handling (ITS#6342)
 	Documentation
 		ldap_get_dn(3) typos (ITS#5366)
 
